# tbrowser

./: .clangd  AxisTicks.cpp  AxisTicks.h  Browser.cpp  Browser.h  CMakeLists.txt  Console.cpp  Console.h  LICENSE  Main.cpp  README.md  RootFile.cpp  RootFile.h  definitions.h  maketuple.py
include/: AxisTicks.h  Browser.h  Console.h  Menu.h  RootFile.h  definitions.h
src/: AxisTicks.cpp  Browser.cpp  Console.cpp  Main.cpp  Menu.cpp  RootFile.cpp  testtuple.py
